# backend/routes/api.php
@@ -13,9 +13,12 @@ use Illuminate\Support\Facades\Route;
 | is assigned the "api" middleware group. Enjoy building your API!
 |
 */
-Route::post('/users', 'AuthController@register');
-Route::post('/login', 'AuthController@login');
 
-Route::middleware('auth:api')->get('/user', function (Request $request) {
-    return $request->user();
+
+Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
+  return $request->user();
 });
+
+Route::post('/user', 'AuthController@register');
+Route::post('/login', 'AuthController@login');
+Route::get('/logout', 'AuthController@logout')->middleware('auth:sanctum');
